--- a/style.css
+++ b/style.css
@@ -53,10 +53,28 @@ main {
 }
 
 /* portfolio styles */
-#interests {
-    border: 4px silver ridge;
-    padding: 8px;
+    /* portfolio styles */
+    .content h1 {
+    color: black;
 }
-h2, h3 {
-    margin: 0px;
+
+#portfolio {
+    list-style-type: none;
+    padding-left: 0;
+}
+
+#portfolio li {
+    background: #fff;
+    padding: 10px;
+    border-radius: 10px;
+    margin-bottom: 10px;
+}
+
+#portfolio li:hover {
+    background: #eee;
+}
+
+#portfolio a {
+    text-decoration: none;
+    color: #454545;
 }
